modificacion en cambio 1 a 1

--- a/.gitignore
+++ b/.gitignore
@@ -159,5 +159,6 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-test_image.jpeg
 inswapper_128.onnx
+*.jpeg
+*.jpg
